Fixed horizontal scroll video block

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -26,6 +26,7 @@
 	left: 0;
 	width: 100%;
 	height: 150%;
+	overflow: hidden;
 	z-index: -1 !important;
 }
 .videoBackground video {
